[package]
name = "badge-cds-service"
version = "0.1.0"
authors = ["Benjamin Coenen <benjamin.coenen@hotmail.com>"]

[dependencies]
# Error
failure = "0.1.3"
failure_derive = "0.1.2"
# Json
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.0"
# Actor
actix = "0.8.3"
actix-web = "1.0.0"
tokio = "0.1.11"
# Log
log = "0.4"
env_logger = "0.5.13"
# Database code
uuid = { version = "0.5", features = ["serde", "v4"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
diesel_migrations= "1.1.0"
r2d2 = "0.8"
badge = "0.2.0"
futures = "0.1.26"
bytes = "0.4.12"
dotenv = "0.13.0"
config = "0.9"
chrono = { version = "0.4.6", features = ["serde"] }
sdk-cds = "0.3.0"
rdkafka = { version = "0.21.0", features = ["ssl", "sasl"] }
rdkafka-sys = "1.0.0"
clap = "2.33.0"
url = "1.7.2"
url_serde = "0.2.0"
