[package]
name = "sdk-cds"
version = "0.4.0"
authors = ["Benjamin Coenen <benjamin.coenen@corp.ovh.com>"]
edition = "2018"
description = "SDK in Rust to use CDS API"
repository = "https://github.com/ovh/cds"
readme = "README.md"
keywords = ["cds", "sdk", "cd", "ci"]
license = "BSD-3-Clause"
categories = ["api-bindings", "development-tools"]

[dependencies]
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
http = "0.1.19"
chrono = { version = "0.4.10", features = ["serde"] }
jsonwebtoken = "7"
parking_lot = "0.10.0"
regex = "1.3.1"
failure = "0.1.6"
surf = "1.0.3"
url = "2.1.0"
futures-util = "0.3.1"
futures = "0.3.1"
async-std = "1.4.0"
mockito = "0.22.0"
